tests/baselines/reference/noImplicitAnyFunctions.errors.txt
tests/cases/compiler/noImplicitAnyFunctions.ts(2,1): error TS7010: 'f1', which lacks return-type annotation, implicitly has an 'any' return type.
tests/cases/compiler/noImplicitAnyFunctions.ts(6,13): error TS7006: Parameter 'x' implicitly has an 'any' type.
tests/cases/compiler/noImplicitAnyFunctions.ts(17,1): error TS7010: 'f6', which lacks return-type annotation, implicitly has an 'any' return type.
tests/cases/compiler/noImplicitAnyFunctions.ts(19,1): error TS7010: 'f6', which lacks return-type annotation, implicitly has an 'any' return type.
tests/cases/compiler/noImplicitAnyFunctions.ts(19,24): error TS7006: Parameter 'y' implicitly has an 'any' type.


==== tests/cases/compiler/noImplicitAnyFunctions.ts (5 errors) ====
    
    declare function f1();
    ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7010: 'f1', which lacks return-type annotation, implicitly has an 'any' return type.
    
    declare function f2(): any;
    
    function f3(x) {
                ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    }
    
    function f4(x: any) {
        return x;
    }
    
    function f5(x: any): any {
        return x;
    }
    
    function f6(x: string, y: number);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7010: 'f6', which lacks return-type annotation, implicitly has an 'any' return type.
    function f6(x: string, y: string): any;
    function f6(x: string, y) {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
                           ~
!!! error TS7006: Parameter 'y' implicitly has an 'any' type.
        return null;
    ~~~~~~~~~~~~~~~~
    }
    ~
!!! error TS7010: 'f6', which lacks return-type annotation, implicitly has an 'any' return type.